manifests/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
  labels:
    app: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
      - name: synapse
        image: ghcr.io/element-hq/synapse:v1.123.0
        ports:
        - containerPort: 8008
        - containerPort: 9093
        volumeMounts:
        - name: data
          mountPath: /data
        - name: synapse-signing-key
          mountPath: /secrets/
          readOnly: true
        - name: synapse-config
          mountPath: /config
          readOnly: true
        requests:
          memory: "512Mi"
          cpu: "10m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc
      - name: synapse-signing-key
        secret:
          secretName: synapse-signing-key
      - name: synapse-config
        configMap:
          name: synapse-config
