manifests/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app: synapse
